refactor mapping b/w sensor and drones
